--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
+    "@types/bun": "^1.3.4",
     "@types/node": "^24.9.2",
     "front-matter": "^4.0.2",
+    "postcss-rtlcss": "^5.7.1",
     "vitepress": "^1.6.4"
   },
   "scripts": {
@@ -11,6 +13,7 @@
     "format": "prettier --write . && ng lint --fix"
   },
   "dependencies": {
+    "vazirmatn": "^33.0.3",
     "vite-plugin-vitepress-auto-sidebar": "^1.7.1"
   }
 }
